SERVER-53357 Make failure to mirror a non-fatal error again